--- a/main/src/templates/base.html
+++ b/main/src/templates/base.html
@@ -10,7 +10,7 @@
         <div class="navbar navbar-inverse">
             <div class="container">
                 {% if user.is_authenticated %} 
-                    <a class="navbar-brand">What's up {{ user.username }}!</a>
+                    <a href="{% url 'launchpad:index' %}" class="navbar-brand">What's up {{ user.username }}!</a>
                 {% else %}
                     <a class="navbar-brand">Welcome!</a>
                 {% endif %}
