--- a/main/src/templates/base.html
+++ b/main/src/templates/base.html
@@ -25,6 +25,8 @@
         {% block content %}
         {% endblock %}
 
+        <img src="{% static 'img/screenshot-2016-09-29_07:15:43.723859.png' %}">
+
         <script src="{% static 'js/jquery.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/script.js' %}"></script>
