--- a/test_app/src/static/css/styles.css
+++ b/test_app/src/static/css/styles.css
@@ -1,23 +1,5 @@
-.green {
-    background: green;
-}
-.content.container {
-    margin-top: 75px;
-}
-
-.turtle {
-    height: 380px;
-    width: 41.66667%;
-}
-
-.donatello {
-    background: url(/static/img/donatello.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100%;
-    width: 100%;
-}
-
 img {
-    text-indent: -999px;
+    display: inline-block;
+    width: 200px;
+    height: 200px;
 }
