--- a/main/src/templates/base.html
+++ b/main/src/templates/base.html
@@ -5,6 +5,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/4.0.1/ekko-lightbox.css">
     </head>
     <body>
         <div class="navbar navbar-inverse">
@@ -25,10 +26,10 @@
         {% block content %}
         {% endblock %}
 
-        <img src="{% static 'img/screenshot-2016-09-29_07:15:43.723859.png' %}">
-
         <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/jquery.cookie.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/4.0.1/ekko-lightbox.js"></script>
         <script src="{% static 'js/script.js' %}"></script>
     </body>
 </html>
